Frontend/securehub_front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securehubfront-deployment
  namespace: securehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/strast-upm/securehub_frontend:latest 
        ports:
        - containerPort: 3030
      imagePullSecrets:
      - name: ghcr-secret
