Frontend/securehub_front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: securehub
  annotations:
    metallb.universe.tf/address-pool: "primary"
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3030
  type: LoadBalancer
